# opensre

./: .env.example  .gitignore  .importlinter.strict  .pre-commit-config.yaml  AGENTS.md  CI.md  CONTRIBUTING.md  Makefile  README.md  TOOL_INTEGRATION_CHECKLIST.md  mypy.ini  pyproject.toml  ruff.toml
.cursor/rules/: code-style.mdc  graph-nodes.mdc  testing.mdc
.github/ci/: check_direct_imports.py
.github/codeql/: codeql-config.yml
.github/scripts/: automerge_pr.py
.github/workflows/: README.md  automerge.yml  benchmark-image.yml  benchmark-promote-image.yml  benchmark-run.yml  benchmark-seed-secret.yml  ci.yml  release.yml  routing-live.yml  synthetic-deterministic.yml
app/: config.py  ui_theme.py
app/agents/: tail.py
app/analytics/: cli.py  events.py  provider.py
app/cli/: __main__.py  first_launch_github.py
app/constants/: investigation.py
app/core/: __init__.py
app/deployment/: __init__.py
app/entrypoints/: mcp.py
app/feedback/: misses.py
app/fleet_monitoring/: __init__.py  bus.py  config.py  conflicts.py  discovery.py  lifecycle.py  pricing.py  providers.py  sampler.py  status.py  sweep.py  tail.py  token_rate.py
app/guardrails/: apply.py  stream.py
app/integrations/: __main__.py  _catalog_impl.py  _validation_helpers.py  _verification_adapters.py  _verifiers_loader.py  catalog.py  cli.py  cloudtrail.py  config_models.py  daily_update.py  effective_models.py  github_login.py  kafka.py  port.py  registry.py  snowflake.py  supabase.py  temporal.py  verify.py
app/observability/: __init__.py  debug.py  display.py  output_format.py  progress.py
app/remote/: __init__.py  client.py  server.py  stream.py
app/scheduler/: tasks.py
app/services/: AGENTS.md  agent_llm_client.py  bedrock_converse.py  chat_sdk_adapter.py  llm_client.py
app/state/: agent_state.py  slices.py
app/tools/: base.py  registered_tool.py  tool_decorator.py
app/types/: evidence.py
app/utils/: llm_retry.py  sdk.py  slack_delivery.py
app/watch_dog/: monitor.py
cli/wizard/: _ui.py  env_sync.py  flow.py
config/: config.py  grafana_cloud.py  llm_credentials.py  llm_keyring.py  synthetic_paths.py
config/llm_auth/: credentials.py
context/: action_prompt_text.py
context/session/: compaction.py  paths.py  repo.py
core/: llm_invoke_errors.py  provider.py
core/agent/: agent.py  loop_host.py  provider_hooks.py  react_loop.py  run_io.py
core/agent_harness/: AGENTS.md  __init__.py  harness.py  ports.py
core/domain/: __init__.py
core/llm/: AGENTS.md  agent_llm_client.py  client_builders.py  factory.py  image_description.py  llm_client.py  transport_mode.py  types.py
core/messages/: __init__.py  build_runtime_messages.py  convert_to_llm_messages.py  ensure_runtime_messages.py  message_formatter.py  transcript.py
core/runtime/: __init__.py  agent.py  events.py  execution.py  provider.py  types.py
core/state/: agent_state.py
docs/: DEVELOPMENT.md  NAMING.md  agent-context-data-stores.md  azure-sql.mdx  background-investigations.mdx  closed-loop-learning.mdx  cloudopsbench.mdx  cloudtrail_events.mdx  cron.mdx  docs.json  features.mdx  fleet.mdx  github.mdx  grafana_annotations.mdx  hermes.mdx  index.mdx  integrations-overview.mdx  interactive-shell-action-policy.md  interactive-shell-assistant.mdx  interactive-shell-commands.mdx  interactive-shell-privacy.mdx  investigation-overview.mdx  investigation-tool-calling.md  llm-providers.mdx  mongodb-atlas.mdx  openobserve.mdx  pagerduty.mdx  posthog-mcp.mdx  redis.mdx  remote-runtime-investigation.mdx  routing-policy-architecture.md  routing-scenario-test-gap.md  sentry.mdx  sessions.mdx  smtp.mdx  snowflake.mdx  supabase.mdx  tempo.mdx  temporal.mdx  turn-scenario-test-gap.md
docs/configuration/: environment-variables.mdx
docs/good-first-issues/: README.md
docs/integrations/: trello.mdx
docs/messaging/: rocketchat.mdx  slack.mdx  telegram.mdx
gateway/: AGENTS.md  README.md  main.py  manager.py  turn_handler.py
gateway/polling/: handle_polled_inbound_telegram_msg.py  telegram_gateway_background.py
gateway/runtime/: __init__.py  daemon.py  manager.py
gateway/session/: resolve_or_rotate_session.py
gateway/slack/: attachments.py  dispatcher.py  events.py  thread_history.py
gateway/tests/: conftest.py  test_authorize.py  test_main.py  test_session_resolver.py  test_slash_routing.py  test_turn_handler.py
infra/bench/: Dockerfile.bench  iam_task.tf  s3.tf  variables.tf
infra/ci/: test_scope_rules.py
integrations/: _relational.py  cli.py  config_models.py  daily_update.py  harness_adapters.py  registry.py  webapp_vault.py
integrations/aws/: availability.py
integrations/discord/: __init__.py  delivery.py
integrations/gitlab/: verifier.py
integrations/groundcover/: client.py
integrations/helm/: helpers.py
integrations/hermes/: investigation.py  sinks.py
integrations/llm_cli/: AGENTS.md  runner.py
integrations/mysql/: __init__.py
integrations/notion/: client.py
integrations/opensre/: llm_eval_judge.py
integrations/prefect/: client.py
integrations/sentry/: digest_delivery.py  digest_prerequisites.py
integrations/slack/: __init__.py  delivery.py  web_client.py
integrations/smtp/: __init__.py  delivery.py  verifier.py
integrations/telegram/: alarms.py  credentials.py  delivery.py  verifier.py
integrations/twilio/: delivery.py
integrations/whatsapp/: delivery.py
interactive_shell/: AGENTS.md  controller.py
interactive_shell/agent_shell/: action_dispatch.py  adapters.py  agent.py  turn_entry.py
interactive_shell/chat/: tool_gathering.py
interactive_shell/command_registry/: __init__.py  slash_catalog.py
interactive_shell/harness/: shell_harness.py  turn.py
platform/: harness_ports.py
scripts/: migrate_routing_scenario_tool_actions.py
tests/: cli_smoke_test.py  test_aws_urls.py  test_config.py  test_core_layering.py  test_integrations_port_adapters.py  test_llm_credentials.py  test_observability_adapters.py  test_openclaw_integration.py  test_upstream_correlation_provider.py
tools/: registry.py  registry_discovery.py  registry_index.py
(+1056 files in other folders)
